--- a/src/main.scss
+++ b/src/main.scss
@@ -2,10 +2,8 @@ body {
   font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
   margin:0; 
-  // background-color:#151515;
   background-color: #eeeeee;
-  overflow: hidden;
-
+  
   // remove mobile selection hightlight
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
@@ -142,4 +140,18 @@ svg {
 }
 div {
   user-select: none;
+}
+
+// #MobileDevices specific:
+// fixing the mobile browser bounce issue
+html {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+body {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  -webkit-overflow-scrolling: touch;
 }
